--- a/Assets/css/plugin-name.css
+++ b/Assets/css/plugin-name.css
@@ -13,16 +13,16 @@
     --pp-green: #2EA02E;
     --pp-green-dark: #055D20;
     --pp-orange: #FF6500;
-    --border-radius: 3px;
     --button-blue-gradient: linear-gradient(to bottom, #7892c2 80%, #476e9e 100%);
     --blue-border-gradient-match: #476E9E;
-    --header-page-margin: 5px 15px 10px 15px;
-    --page-margin: 0px 15px 0px 15px;
-    --title-margin: 0px 15px 0px 15px;
     --button-background-delete: #D05C84;
     --link-color-primary: #36C;
     --blue-icon-dark: #034CA6;
-    --panel-background: #EEEEEE;
+    --header-page-margin-ksp: 5px 15px 10px 15px;
+    --page-margin-ksp: 0px 15px 0px 15px;
+    --title-margin-ksp: 0px 15px 0px 15px;
+    --border-radius-ksp: 3px;
+    --panel-background-ksp: #EEEEEE;
 }
 
 .pp-blue { color: var(--pp-blue); fill: var(--pp-blue); }
